# jgss

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/jgss/: __init__.py  _convergence.py  _core.py  _sampling.py  _scaling.py  _subspace.py  _types.py
tests/: conftest.py  test_api.py  test_convergence.py  test_robustness.py
