# Source: https://hatch.pypa.io/latest/config/metadata/
# Source: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Source: https://github.com/ofek/hatch-vcs

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jgss"
dynamic = ["version"]
description = "JGSS nonlinear solver for DSGE models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Joshua Fredricks", email = "joshua.l.fredricks@gmail.com" },
    { name = "Jaromir Benes", email = "jaromir.benes@gmail.com" },
]
keywords = ["dsge", "economics", "nonlinear-solver", "macroeconomics", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/IRIS-Solutions-Team/jgss"
Repository = "https://github.com/IRIS-Solutions-Team/jgss"
"Bug Tracker" = "https://github.com/IRIS-Solutions-Team/jgss/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/jgss/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jgss"]
