# Source: https://hatch.pypa.io/latest/config/metadata/
# Source: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Source: https://github.com/ofek/hatch-vcs

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jgss"
dynamic = ["version"]
description = "Nonlinear solver for macroeconomic and DSGE models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Joshua Fredricks", email = "joshua.l.fredricks@gmail.com" },
    { name = "Jaromir Benes", email = "jaromir.benes@gmail.com" },
]
keywords = ["dsge", "macroeconomic", "economics", "nonlinear", "solver", "equations", "high-dimensional", "levenberg-marquardt", "subspace", "scientific-computing", "numerical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/IRIS-Solutions-Team/jgss"
Repository = "https://github.com/IRIS-Solutions-Team/jgss"
"Bug Tracker" = "https://github.com/IRIS-Solutions-Team/jgss/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/jgss/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jgss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "robustness: marks tests for edge cases and ill-conditioned problems",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/jgss/_version.py"]  # Auto-generated by setuptools-scm

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
